GPC/tests/examples/fail/divBy02.gpc

GPRM::Kernel::Test test;

void GPRM::Test::divBy02(int *a) {
    double y = (1.0/0.0);
    test.m1(y);
}
